# black-diamond-hubspot-service

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: config.py  constants.py  logger.py  main.py
app/auth/: hubspot_auth.py
app/clients/: hubspot_client.py
app/routes/: health.py  scan.py
app/services/: extraction_service.py  normalization_service.py
app/storage/: minio_client.py
