[project]
name = "black-diamond-hubspot-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.10.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-json-logger>=4.1.0",
    "requests>=2.34.2",
]
